# edtw

./: .gitignore  .~lock.lags.csv#  DTWalgorithm.py  LICENSE.md  MIDER_lag.py  MIout.csv  README.md  copyDTWalgorithm.py  copymain.py  exc2.csv  exchange1970.csv  functions.py  input_signal_peak.csv  lags.csv  lagsout1.csv  linear.py  linear_in.csv  linear_lag.py  main.py  notebook.ipynb  ntwrkx.py  one_peak_signals_generator.py  out.csv  setup.cfg  setup.py  signal_generator.py  some.py  tests.py  tests_weather.py  weather.py
Output/: MIout.csv  lags.csv  lagsnormal.csv  lagsout.csv  lagsout1.csv  lagsout_dream4_10.csv  lagsout_dream4_100.csv  lagsout_dream4_1030.csv  lagsout_enzyme_cat_chain.csv  lagsout_glycolysis.csv  lagsout_irma_on_off.csv  lagsout_irma_on_off30.csv  lagsout_mapk.csv  output.csv  weather_lags.csv
datasets/: dream4_100.csv  glycolysis.csv  taumin_dream4_10.csv  taumin_dream4_100.csv  taumin_dream4_1030.csv  taumin_enzyme_cat_chain.csv  taumin_glycolysis.csv  taumin_mapk.csv  taumin_mapk30.csv  taumin_small_chain.csv  weather.csv
datasets/nucleotides/: dream4_10.csv  enzyme_cat_chain.csv  irma_on_off.csv  mapk.csv  small_chain.csv  taumin_dream4_10030.csv  taumin_enzyme_cat_chain30.csv  taumin_glycolysis30.csv  taumin_irma_on_off30.csv  taumin_small_chain30.csv
datasets/weather/: C-detailed-unknown-20150401-20170401.csv  CF-moscow-20120101-20141231.csv  CF-moscow-20120101-20171231.csv  F-moscow-20120101-20171231.csv
output/old/: lagsout_glycolysis.csv  lagsout_mapk.csv  lagsout_small_chain30.csv
src/: functions.py
