[metadata]
name = edtw
version = 0.0.1
author = qkudev
author_email = qkudev@gmail.com
description = Entropy-based DTW
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qkudev/edtw
project_urls =
    Bug Tracker = https://github.com/qkudev/edtw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src